--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "linqts": "^1.14.4",
+    "moment": "^2.29.4",
     "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3",
